# ocaml-maildir

./: .travis.yml  dune-project  maildir.opam
fuzz/: dune  fuzz.ml
lib/: maildir.ml  maildir.mli
lib-mem/: maildir_mem.mli
lib-unix/: maildir_unix.ml  maildir_unix.mli
test/: dune  test_mem.ml  test_unix.ml
